fix webkit gallery layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -281,7 +281,6 @@ h4, h5, h6 {
   display: block;
   position: relative;
   z-index: inherit;
-  will-change: transform;
 }
 
 @media (min-width: 640px) {
@@ -305,5 +304,69 @@ h4, h5, h6 {
 @media (min-width: 1280px) {
   .gallery-masonry {
     column-count: 6;
+  }
+}
+
+/* WebKit (Safari) - Use square grid instead of masonry */
+.gallery-masonry.is-webkit {
+  column-count: unset;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: var(--gallery-gap);
+  overflow: visible;
+}
+
+.gallery-masonry.is-webkit .gallery-item-wrapper {
+  display: block;
+  width: 100%;
+  margin-bottom: 0;
+  position: relative;
+  padding-bottom: 100%; /* 1:1 aspect ratio */
+  overflow: visible !important; /* Allow scale animation to overflow */
+}
+
+.gallery-masonry.is-webkit .gallery-item {
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: visible !important; /* Allow scale animation */
+}
+
+/* The inner div that wraps the image - this clips to square */
+.gallery-masonry.is-webkit .gallery-item > div {
+  width: 100%;
+  height: 100%;
+  overflow: hidden !important; /* Clip image to square here */
+}
+
+.gallery-masonry.is-webkit .gallery-item img {
+  width: 100%;
+  height: 100% !important;
+  object-fit: cover;
+}
+
+@media (min-width: 640px) {
+  .gallery-masonry.is-webkit {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 768px) {
+  .gallery-masonry.is-webkit {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (min-width: 1024px) {
+  .gallery-masonry.is-webkit {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+@media (min-width: 1280px) {
+  .gallery-masonry.is-webkit {
+    grid-template-columns: repeat(6, 1fr);
   }
 } 
